[CLEAN CODE] Fix warning in tests